[tool.poetry]
name = "pertpy"
version = "0.5.0"  # <<COOKIETEMPLE_FORCE_BUMP>>
description = "Perturbation Analysis in the scverse ecosystem."
authors = ["Lukas Heumos <lukas.heumos@posteo.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/theislab/pertpy"
repository = "https://github.com/theislab/pertpy"
documentation = "https://pertpy.readthedocs.io"
packages = [
    { include = "pertpy" },
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
rich = ">=10.11.0"
PyYAML = ">=5.4.1"
scanpy = ">=1.8.1"
pypi-latest = ">=0.1.1"
muon = ">=0.1.2"
requests = ">=2.27.1"
ipywidgets = ">=7.6.5"
switchlang = "^0.1.0"
scikit-misc = ">=0.1.4"
plotnine = ">=0.10.1"
leidenalg = "^0.9.0"
scipy = "^1.9.3"
scvi-tools = "^0.19.0"
adjusttext = ">=0.7.3,<0.9.0"
toytree = "^2.0.1"
arviz = ">=0.14,<0.16"
numpyro = ">=0.10.1"
statannotations = "^0.5.0"
protobuf = "4.22.4"
decoupler = "^1.3.3"
ete3 = {version = "^3.1.2", optional = true}
pyqt5 = {version = "^5.15.9", optional = true}
ott-jax = "^0.4.0"
pandas = "^2.0.0"
sparsecca = ">=0.3.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"
coverage = {extras = ["toml"], version = ">=6.2"}
mypy = ">=0.930"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
pre-commit = ">=2.16.0"
flake8 = ">=4.0.1"
black = ">=21.12b0"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.11.29"
flake8-docstrings = ">=1.5.0"
flake8-rst-docstrings = ">=0.2.5"
pep8-naming = ">=0.12.1"
reorder-python-imports = ">=2.6.0"
pre-commit-hooks = ">=4.1.0"
Pygments = ">=2.11.1"
types-pkg-resources = ">=0.1.3"
types-requests = ">=2.27.4"
types-attrs = ">=19.1.0"
Jinja2 = ">=3.0.3"
pyenchant = ">=3.2.1"
nbsphinx = ">=0.8.8"
sphinx-gallery = ">0.6"
sphinx-autodoc-typehints = ">=1.12.0"
sphinx-last-updated-by-git = ">=0.3.0"
sphinxcontrib-bibtex = ">=2.4.1"
sphinx-automodapi = ">=0.14"
nbsphinx-link = ">=1.3.0"
sphinx-copybutton = ">=0.4.0"
pyupgrade = ">=2.31.0"
furo = ">=2022.3.4"
myst-parser = ">=0.17.0"
sphinx-remove-toctrees = ">=0.0.3"
sphinx-design = ">=0.0.13"
sphinxext-opengraph = ">=0.6.2"

[tool.poetry.extras]
ete3 = ["ete3"]

[tool.poetry.scripts]
pertpy = "pertpy.__main__:main"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[tool.black]
line-length = 120

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
no_strict_optional = true

[tool.isort]
multi_line_output=3
include_trailing_comma=true
balanced_wrapping=true
line_length=120

[tool.coverage.paths]
source = ["pertpy", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pertpy"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
